--- a/style.css
+++ b/style.css
@@ -12,3 +12,11 @@
 .spacing {
   width: 25%;
 }
+
+footer{
+    text-align: center;
+    padding-top:20px;
+    border-top-style: solid;
+    border-top-width: 2px;
+    border-top-color: pink;
+}
