--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 footer{
     text-align: center;
     padding-top:20px;
+    padding-bottom: 20px;
     border-top-style: solid;
     border-top-width: 2px;
     border-top-color: pink;
