--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
   width: 200px;
   height: 300px;
   object-fit: cover;
-  visibility: hidden;
+}
+.imageIsNotVisible{
+    visibility: hidden;
 }
 
 .spacing {
